@@ -2,17 +2,20 @@ Changes
 =======
 
 0.03001 - 28 Oct 2010
+  - Require Memcached::libmemcached 0.4404
   - Documented available libmemcached behaviours.
   - All libmemcached behaviours can now be set via new({ behaviour_... => ... })!
+  - Optimized namespace support via libmemcached 'prefix key' mechanism.
+  - Fixed methods like incr() and decr() that didn't apply the namespace.
+  - Fixed get_multi() to not add namespace to the returned hash keys.
+  - Added namespace() method for Cache::Memcached::Fast compatibility.
   - Added support for Cache::Memcached::Fast style hashref server specification.
   - Added support for server weights.
   - Added $keys parameter to stats()
   - Removed malloc, sizes, and self from default stats() $keys.
   - Added server_versions() method for Cache::Memcached::Fast compatibility.
   - Added the documented enable_compress() method for Cache::Memcached compatibility.
-  - Require Memcached::libmemcached 0.4403
   - Removed undocumented version() method.
-  - Warn if namespace > 128 bytes (to allow future optimization).
   - Assorted documentation additions and cleanups.
 
 0.02011 - 26 Oct 2010
